Added data management methods